--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+@font-face {
+  font-family: Ubuntu;
+  src: url('./Ubuntu-Regular.ttf');
+}
+
+html, body {
+  background-color: #E9F2FF;
+}
+
 .App {
+  font-family: Ubuntu;
   text-align: center;
+
 }
 
 .App-logo {
@@ -13,20 +24,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
