--- a/src/recentblocks.css
+++ b/src/recentblocks.css
@@ -1,6 +1,9 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    overflow: scroll;
+    
+
+    /* border: solid red; */
+    height: 40vh;
+    
 }
