--- a/src/block.css
+++ b/src/block.css
@@ -1,18 +1,15 @@
-
-
 .block-container {
-    /* display: flex;
-    flex-direction: row;
-  
-    
-    width: 90%; */
-    flex: 1;
+  flex: 1;
 
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    border: solid black;
-    justify-content: space-between;
-    height: 50%;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  border: solid rgba(0, 0, 0, 0.192);
+  border-radius: 10px;
+  margin-bottom: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.432);
+  height: 50%;
+  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+    0 15px 40px rgba(166, 173, 201, 0.2);
 }
