--- a/src/web3.css
+++ b/src/web3.css
@@ -10,4 +10,32 @@
   
   cursor: pointer;
   font-size: 1rem;
+  animation: contract 0.5s
+  
+
+}
+
+.act-bal-btn:hover {
+    animation: expand 0.5s forwards
+}
+
+ 
+
+@keyframes expand {
+    0% {
+        transform: scale(1.0);
+    }
+    100% {
+        transform: scale(1.1);
+    }
+}
+
+@keyframes contract {
+    0% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1.0);
+    }
+    
 }
