--- a/src/block.css
+++ b/src/block.css
@@ -2,9 +2,10 @@
   flex: 1;
 
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row;
+  align-items: flex-start;
+  /* justify-content: space-between; */
+  /* justify-content: sp; */
+  flex-direction: column;
   border: solid rgba(0, 0, 0, 0.192);
   border-radius: 10px;
   margin-bottom: 0.5rem;
