--- a/src/block.css
+++ b/src/block.css
@@ -3,8 +3,6 @@
 
   display: flex;
   align-items: flex-start;
-  /* justify-content: space-between; */
-  /* justify-content: sp; */
   flex-direction: column;
   border: solid rgba(0, 0, 0, 0.192);
   border-radius: 10px;
@@ -13,4 +11,5 @@
   height: 50%;
   box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
     0 15px 40px rgba(166, 173, 201, 0.2);
+    height: fit-content;
 }
