--- a/src/recentblocks.css
+++ b/src/recentblocks.css
@@ -33,6 +33,10 @@
   align-items: center;
 }
 
+.container h3 {
+  margin-left: 1rem;
+}
+
 @-webkit-keyframes rainbow {
   0% {
     background-position: 0% 82%;
